--- a/Guitar.css
+++ b/Guitar.css
@@ -3,15 +3,14 @@
 
 .controller .custom {
 	/* Base background image of guitar */
-	background: url(https://i.imgur.com/HzcJPw1.png);
+	background: url(/Guitar.png);
 	height: 558px;
 	width: 784px;
 }
 
 .custom .disconnected {
 	/* Image for disconnected Guitar */
-	background:
-	url (https://i.imgur.com/aVaOVRu.png);
+	background: url(/Guitar_Disconnected.png);
 }
 
 /* This hides the controller's button when disconnected so only the background image remains */ 
