--- a/Guitar.css
+++ b/Guitar.css
@@ -3,14 +3,14 @@
 
 .controller .custom {
 	/* Base background image of guitar */
-	background: url(/Guitar.png);
+	background: url('https://exemplaryme.github.io/Guitar.png');
 	height: 558px;
 	width: 784px;
 }
 
 .custom .disconnected {
 	/* Image for disconnected Guitar */
-	background: url(/Guitar_Disconnected.png);
+	background: url('https://exemplaryme.github.io/Guitar_Disconnected.png');
 }
 
 /* This hides the controller's button when disconnected so only the background image remains */ 
