--- a/guitarskin.css
+++ b/guitarskin.css
@@ -3,15 +3,17 @@
 
 .controller .custom {
 	/* Base background image of guitar */
-	background: url(https://i.imgur.com/HzcJPw1.png);
-	height: 558px;
-	width: 784px;
+	background: url('https://i.imgur.com/HzcJPw1.png');
+	height: 250px;
+	width: 741px;
 }
 
 .custom .disconnected {
 	/* Image for disconnected Guitar */
 	background:
-	url (https://i.imgur.com/aVaOVRu.png);
+	url ('https://i.imgur.com/aVaOVRu.png');
+	height: 250px;
+	width: 741px;
 }
 
 /* This hides the controller's button when disconnected so only the background image remains */ 
