--- a/guitarskin.css
+++ b/guitarskin.css
@@ -24,8 +24,7 @@
 
 .custom .bumper.left{
     background: url(https://exemplaryme.github.io/Fret5.png);
-    height: 27px;
-    width: 341px;
+    position: absolute;
     top: 100px;
     left: 100px;
 }
