--- a/guitarskin.css
+++ b/guitarskin.css
@@ -148,14 +148,28 @@
 
 /* Start and Select Buttons */
 
-.custom .arrows{
-    position: absolute;
-    width: 250px;
-    height: 741px;
-}
-
 .custom .start {
 	background: url(https://exemplaryme.github.io/Start.png);
+	height: 23px;
+	width: 22px;
+	display: block;
+	position: absolute;
+	top: 154;
+	left: 43;
+}
+
+.custom .start.pressed {
+	background: url(https://exemplaryme.github.io/Starth.png);
+	height: 23px;
+	width: 22px;
+	display: block;
+	position: absolute;
+	top: 154;
+	left: 43;
+}
+
+.custom .back {
+	background: url(https://exemplaryme.github.io/Select.png);
 	height: 23px;
 	width: 22px;
 	display: block;
@@ -164,8 +178,8 @@
 	left: 60;
 }
 
-.custom .start.pressed {
-	background: url(https://exemplaryme.github.io/Starth.png);
+.custom .back.pressed {
+	background: url(https://exemplaryme.github.io/Selecth.png);
 	height: 23px;
 	width: 22px;
 	display: block;
