--- a/guitarskin.css
+++ b/guitarskin.css
@@ -146,6 +146,29 @@
 
 }
 
+.custom .face.up {
+	background: url(https://exemplaryme.github.io/StrumDown.png);
+	height: 16px;
+	width:  65px;
+	display: block;
+    position: absolute;
+    top: 120px;
+    left: 139px;
+
+}
+
+.custom .face.up.pressed {
+	background: url(https://exemplaryme.github.io/StrumDownh.png);
+	height: 16px;
+	width:  65px;
+	display: block;
+    position: absolute;
+    top: 120px;
+    left: 139px;
+
+}
+
+
 /* Start and Select Buttons */
 
 .custom .start {
@@ -154,8 +177,8 @@
 	width: 22px;
 	display: block;
 	position: absolute;
-	top: 154px;
-	left: 43px;
+	top: 151px;
+	left: 40px;
 }
 
 .custom .start.pressed {
@@ -164,8 +187,8 @@
 	width: 22px;
 	display: block;
 	position: absolute;
-	top: 154px;
-	left: 43px;
+	top: 151px;
+	left: 40px;
 }
 
 .custom .back {
@@ -174,8 +197,8 @@
 	width: 22px;
 	display: block;
 	position: absolute;
-	top: 135px;
-	left: 60px;
+	top: 134px;
+	left: 59px;
 }
 
 .custom .back.pressed {
@@ -184,6 +207,6 @@
 	width: 22px;
 	display: block;
 	position: absolute;
-	top: 135px;
-	left: 60px;
+	top: 134px;
+	left: 59px;
 }
