--- a/guitarskin.css
+++ b/guitarskin.css
@@ -211,3 +211,25 @@
 	top: 131px;
 	left: 58px;
 }
+
+/* The Whammy is Right-Stick */
+
+.custom .stick.right {
+	background: url(https://exemplaryme.github.io/Whammy.png);
+	height: 8px;
+	width: 92px;
+	display: block;
+	position: absolute;
+	top: 187px;
+	left: 78px;
+}
+
+.custom .stick.right.pressed {
+	background: url(https://exemplaryme.github.io/Whammyh.png);
+	height: 8px;
+	width: 92px;
+	display: block;
+	position: absolute;
+	top: 187px;
+	left: 78px;
+}
