--- a/guitarskin.css
+++ b/guitarskin.css
@@ -214,8 +214,18 @@
 
 /* The Whammy we'll set to R-Bumper */
 
-.custom .stick.right {
+.custom .stick {
 	background: url(https://exemplaryme.github.io/Whammy.png);
+	height: 8px;
+	width: 92px;
+	display: block;
+	position: absolute;
+	top: 185px;
+	left: 78px;
+}
+
+.custom .stick.pressed {
+	background: url(https://exemplaryme.github.io/Whammyh.png);
 	height: 8px;
 	width: 92px;
 	display: block;
