--- a/GPV_Skins/guitarskin/guitarskin.css
+++ b/GPV_Skins/guitarskin/guitarskin.css
@@ -1,5 +1,4 @@
-/*Begin Guitar Controller Styling*/
-/*This class defines the base attributes of the skin*/
+/* Begin Guitar Hero LP Controller Styling */
 
 .controller.custom {
 	/* Base background image of guitar */
@@ -20,7 +19,8 @@
     display: none;
 }
 
-/* The Guitar has 5 Buttons A B X Y and L for the frets 1-5, Green, Red, Yelllow, Blue, Orange */
+/* Fret Setup - XInput/360 A Green, B Red, Yellow Y, Blue X, Orange Left Bumper */
+
 .custom .a{
     background: url(https://exemplaryme.github.io/GPV_Skins/guitarskin/Fret1.png);
     height: 27px;
@@ -101,7 +101,6 @@
     left: 525px;
 }
 
-/* Orange Fret as Left Bumper */
 .custom .bumper.left.pressed{
     background: url(https://exemplaryme.github.io/GPV_Skins/guitarskin/Fret5.png);
     height: 27px;
@@ -122,7 +121,7 @@
     left: 500px;
 }
 
-/* Strum Setup - the start is handled up by up and down */
+/* Strum Setup - DPad Up/Down */
 
 .custom .face.up {
 	background: url(https://exemplaryme.github.io/GPV_Skins/guitarskin/StrumUp.png);
@@ -145,7 +144,6 @@
     left: 140px;
 
 }
-
 
 .custom .face.down {
 	background: url(https://exemplaryme.github.io/GPV_Skins/guitarskin/StrumDown.png);
@@ -170,7 +168,7 @@
 }
 
 
-/* Start and Select Buttons */
+/* Start & Select/Back Buttons */
 
 .custom .start {
 	background: url(https://exemplaryme.github.io/GPV_Skins/guitarskin/Start.png);
@@ -212,4 +210,26 @@
 	left: 58px;
 }
 
-/* No whammy yet */
+/* Whammy Set Up - I am not sure how else everyone else is setup, I use a Wiitar and whammy will only work with WiitarThing so I am adding it in */
+
+.custom .stick{
+	background: url(https://exemplaryme.github.io/GPV_Skins/guitarskin/Whammy.png);
+	display: block;
+	position: absolute;
+	height: 8px;
+	width: 92px;
+	top: 180px;
+	left: 79px;
+}
+
+.custom .stick.pressed{
+	background: url(https://exemplaryme.github.io/GPV_Skins/guitarskin/Whammyh.png);
+	display: block;
+	position: absolute;
+	height: 8px;
+	width: 92px;
+	top: 180px;
+	left: 79px;
+
+	
+}
