--- a/GPV_Skins/guitarskin/guitarskin.css
+++ b/GPV_Skins/guitarskin/guitarskin.css
@@ -101,7 +101,7 @@
     left: 525px;
 }
 
-.custom .bumper.left.pressed{
+.custom .bumper.left{
     background: url(https://exemplaryme.github.io/GPV_Skins/guitarskin/Fret5.png);
     height: 27px;
     width: 18px;
@@ -119,6 +119,26 @@
     position: absolute;
     top: 112px;
     left: 500px;
+}
+
+.custom .bumper.right{
+    background: url(https://exemplaryme.github.io/GPV_Skins/guitarskin/Whammy.png);
+    display: block;
+    position: absolute;
+	height: 8px;
+	width: 92px;
+	top: 181px;
+	left: 80px;
+}
+
+.custom .bumper.right.pressed{
+    background: url(https://exemplaryme.github.io/GPV_Skins/guitarskin/Whammyh.png);
+    display: block;
+    position: absolute;
+	height: 8px;
+	width: 92px;
+	top: 181px;
+	left: 80px;
 }
 
 /* Strum Setup - DPad Up/Down */
@@ -212,6 +232,7 @@
 
 /* Whammy Set Up - I am not sure how else everyone else is setup, I use a Wiitar and whammy will only work with WiitarThing so I am adding it in, if you have a whammy supported Guitar this should just work */
 
+/*
 .custom .stick.right{
 	background: url(https://exemplaryme.github.io/GPV_Skins/guitarskin/Whammyh.png);
 	display: block;
@@ -221,8 +242,6 @@
 	top: 181px;
 	left: 80px;
 }
-
-/* This adds the Whammy to the overlay */
 
 /*
 .custom .stick{
