--- a/GPV_Skins/guitarskin/guitarskin.css
+++ b/GPV_Skins/guitarskin/guitarskin.css
@@ -212,8 +212,18 @@
 
 /* Whammy Set Up - I am not sure how else everyone else is setup, I use a Wiitar and whammy will only work with WiitarThing so I am adding it in, if you have a whammy supported Guitar this should just work */
 
-.custom .stick.right{
+.custom .bumper.right{
 	background: url(https://exemplaryme.github.io/GPV_Skins/guitarskin/Whammy.png);
+	display: block;
+	position: fixed;
+	height: 8px;
+	width: 92px;
+	top: 183px;
+	left: 78px;
+}
+
+.custom .bumper.right.pressed{
+	background: url(https://exemplaryme.github.io/GPV_Skins/guitarskin/Whammyh.png);
 	display: block;
 	position: fixed;
 	height: 8px;
