It's Clone Hero time!

--- a/GPV_Skins/guitarskin/guitarskin.css
+++ b/GPV_Skins/guitarskin/guitarskin.css
@@ -210,6 +210,8 @@
 	left: 58px;
 }
 
+/* Whammy mapped to Right Bumper and Right Bumper Pressed to indicate perfect whammying, more on this below. */
+
 .custom .bumper.right{
 	background: url(https://exemplaryme.github.io/GPV_Skins/guitarskin/Whammy.png);
 	display: block;
@@ -230,29 +232,26 @@
 	left: 78px;
 }
 
-/* Whammy Setup - Since the axis position is hard coded in JavaScript we won't map the whammy image to the axis or else it moves and Clone Hero will keep the axis mapping because that's where we need it.
+/* 
 
-Instead we will map the Whammy and Whammyh to the right-bumper, and in GPV you can re-map the right-stick function and axis to the right-bumper.
+Note: I only have Wiitars so I have tweaked this to my use case it might apply to other guitars as well since this is mostly with the way guitar inputs are translated into XInput and how GPV takes that.
 
-We also fix the axis of the right stick whammy by setting the natural position of the whammy as our lowest value, and actually whammying as our highest value. This will make sure the whammy position is reflected in GPV, whether shown or not. You can see this is working by looking at the Xbox controller and seeing the right stick in the correct positions.
+Since Wiitars get tilt and whammy from Wiimote, and we only get full support for Wiimotes using WiiTar thing, Gamepadviewer DOES detect Whammy so moving the whammy up and down moves the right stick horizontal axis. When tilting we also have access to vertical axis. I don't know enough CSS or JS to do something fancy here with just Whammy.png stick mapping, so button map it is.
 
-There are stick options in the generate URL window of GPV, this can also probably be messed around with to not need to remap to another button to get whammy visuals.
-
-The Remapping in GPV is as follow:
-
+Here is a screenwhat of my GPV mappings for this:
 https://imgur.com/ohwnjYf.png
 
-Here's my pre-generated URL with the mapping!
+
+We set Fix Type Trigger 0 to 1, set lowest value as whammy's natural position. Click to set the value, bring the whammy down, and then let go. After 3 seconds GPV should set the value. Click to set the highest value and this time hold the whammy all the way down for three seconds.
+
+This makes sure that GPV knows what the whammy positions are so we can whammy effectively and not just whammy because the whammy itself is different.
+
+Tilting is detected by GPV as RS Vertical, because of this our Whammy.png mapped to a right stick would fly about if we tilt but can be disabled. 
+
+At this point we just re-map to show effectively with a button that we are whammying. Someone else can probably cook up a nice whammy efffect mapped to the stick if they are up for it, just remember to fix axis, etc.
+
+Here's my pre-generated URL with the mapping, just stick it in OBS.
 
 https://gamepadviewer.com/?p=1&css=https%3A%2F%2Fexemplaryme.github.io%2FGPV_Skins%2Fguitarskin%2Fguitarskin.css&map=%7B%22mapping%22%3A%5B%7B%22targetType%22%3A%22buttons%22%2C%22target%22%3A%225%22%2C%22disabled%22%3Afalse%2C%22axesConfig%22%3A%7B%22type%22%3A%22trigger%22%2C%22lowValue%22%3A%22-0.7999542355537415%22%2C%22highValue%22%3A%221%22%7D%2C%22choiceOperand%22%3A%22-%22%2C%22choiceType%22%3A%22axes%22%2C%22choice%22%3A%222%22%7D%2C%7B%22targetType%22%3A%22axes%22%2C%22target%22%3A%222%22%2C%22disabled%22%3Atrue%7D%5D%7D
 
-This is specifically for my wiitar setup
-
-However you can change it to whatever you want if you decide to customize this skin or make it better!
-
  */
-
-
-
-
-
